Add GroundTemperatureValue 0cm and 80cm.